--- a/content/B075T28917-es.md
+++ b/content/B075T28917-es.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'LEGO Ninjago - Cole: Maestro del Spinjit al 40.04 % de descuento'
+title: 'Discount of 40.04 % for LEGO Ninjago - Cole: Maestro del Spinjit'
 date: 
 image: 'https://images-eu.ssl-images-amazon.com/images/I/51DsyW5yV2L._SL200_.jpg'
 comments: true
@@ -19,11 +19,11 @@ descuento: '40.04'
 average: '5.99'
 ---
 
-Ahora mismo tienes [LEGO Ninjago - Cole: Maestro del Spinjitzu  70637 ](https://www.amazon.es/dp/B075T28917/?tag=tolees-21) a 5.99 EUR (original: 9.99 EUR) (40.04 %  de descuento) en el siguiente enlace!
+You've got [LEGO Ninjago - Cole: Maestro del Spinjitzu  70637 ](https://www.amazon.es/dp/B075T28917/?tag=tolees-21) with a  40.04 % discount, with final price of 5.99 EUR (original: 9.99 EUR) at the following link:
 
 [![LEGO Ninjago - Cole: Maestro del Spinjit](https://images-eu.ssl-images-amazon.com/images/I/51DsyW5yV2L._SL200_.jpg)](https://www.amazon.es/dp/B075T28917/?tag=tolees-21)
 
-🔎:
+ℹ️:
 
 
-[Visítala!!!](https://www.amazon.es/dp/B075T28917/?tag=tolees-21)
+[Check the deal!!](https://www.amazon.es/dp/B075T28917/?tag=tolees-21)
